--- a/SPEC.html
+++ b/SPEC.html
@@ -18,12 +18,12 @@
 
 <pre><code>public interface IApplication
 {
-    IAsyncResult BeginInvoke(IRequest request, AsyncCallback cb, object state);
+    IAsyncResult BeginInvoke(IRequest request, AsyncCallback callback, object state);
     IResponse EndInvoke(IAsyncResult result);
 }
 </code></pre>
 
-<p>Applications can respond to requests received by a host by implementing the <code>IApplication</code> interface, which defines a single asynchronous operation in the form of the IAsyncResult asynchronous invocation pattern. Implementors should follow the guidelines provided in the <a href="http://msdn.microsoft.com/en-us/library/ms228963.aspx">MSDN Asynchronous Programming Overview</a>. </p>
+<p>Applications generate responses to requests received by a host by implementing the <code>IApplication</code> interface, which defines single asynchronous operation returning IResponse. The asynchronous operation uses the IAsyncResult pattern (see: <a href="http://msdn.microsoft.com/en-us/library/ms228963.aspx">MSDN Asynchronous Programming Overview</a>). Applications should always generate a response. </p>
 
 <h3>IRequest</h3>
 
@@ -32,6 +32,7 @@
     string Method { get; }
     string Uri { get; }
     IDictionary&lt;string, IEnumerable&lt;string&gt;&gt; Headers { get; }
+
     IAsyncResult BeginReadBody(byte[] buffer, int offset, int count, AsyncCallback callback, object state);
     int EndReadBody(IAsyncResult result);
 
@@ -39,25 +40,21 @@
 }
 </code></pre>
 
-<p>The <code>Method</code> property is the HTTP request method string of the request (e.g., “GET”, “POST”).</p>
+<p>The <code>Method</code> property is the HTTP request method string of the request (e.g., <code>"GET"</code>, <code>"POST"</code>).</p>
 
-<p>The <code>Uri</code> property is the HTTP request URI string of the request, relative to the application object. Hosts may support mapping application objects to some base path—for example, an application object may be configured to respond to requests beginning with "/my-app", in which case, if the host received a request for "/my-app/foo", the <code>Uri</code> property of the <code>IRequest</code> object provided to the application would be “/foo”. For more information, see the <code>owin.base_url</code> key in <a href="#IRequest.Items"><code>Request.Items</code></a>. The value of the <code>Uri</code> property includes the query string of the request URI (e.g., “/path/and?query=string”). </p>
+<p>The <code>Uri</code> property is the HTTP request URI string of the request, relative to the application object. See <a href="#Paths">Paths</a>. The value of the <code>Uri</code> property includes the query string of the request URI (e.g., “/path/and?query=string”).  </p>
 
-<p>The <code>Headers</code> property is a dictionary whose items correspond to HTTP headers in the request. Keys are lower-cased header names without “:” or whitespace. Values are <code>IEnumerable&lt;string&gt;</code> sequences containing the corresponding header value strings, without newlines. If a header appears in a request multiple times, the sequence value for that key will have a number of elements corresponding to the number of times the header appears in the request.</p>
+<p>The <code>Headers</code> property is a dictionary whose items correspond to HTTP headers in the request. Keys are lower-cased header names without <code>':'</code> or whitespace. Values are <code>IEnumerable&lt;string&gt;</code> sequences containing the corresponding header value strings, without newlines. If a header appears in a request multiple times, the sequence value for that key will contain a number of elements corresponding to the number of times the header appears in the request, with each element being a value of a single header.</p>
 
-<p>The methods <code>BeginReadBody</code> and <code>EndReadBody</code> provides access to the body data of the request using the <code>IAsyncResult</code> asynchronous invocation pattern. Applications must provide a destination buffer and a callback which will be invoked by the host when the read operation completes. The <code>EndReadBody</code> method returns the number of bytes read. Hosts must signal the end of the request body by returning 0 from <code>EndReadBody</code>.</p>
+<p>The methods <code>BeginReadBody</code> and <code>EndReadBody</code> provide an asynchronous operation which reads body data of the request into a destination buffer. The <code>EndReadBody</code> method returns the number of bytes read. Hosts must signal the end of the request body by returning 0 from <code>EndReadBody</code>.</p>
 
-<p><a name="IRequest.Items">
-The <code>Items</code> property is a bag of data in which the server, application, or user can store arbitrary data associated with the request.</p>
-
-<p>Hosts must provide at minimum the following keys in <code>Items</code>:</p>
+<p>The <code>Items</code> property is a bag in which the host, application, or user can store arbitrary data associated with the request. Hosts should provide the following keys in <code>Items</code>:</p>
 
 <ul>
-<li><code>owin.base_path</code> – The portion of the request URI’s path corresponding to the “root” of the application object. This is the application’s virtual “location” on the server. It may be an empty string if the application is configured to respond to requests at the “root” of the server.</li>
-<li><code>owin.server_name</code>, <code>owin.server_port</code> – These values can be used to reconstruct the full URL of the request in absence of the HTTP <code>Host</code> header of the request.</li>
-<li><code>owin.request_protocol</code> – “HTTP/1.0” or “HTTP/1.1”</li>
-<li><code>owin.url_scheme</code> – “http” or “https”</li>
-<li><code>owin.remote_endpoint</code> — A <code>System.Net.IPEndPoint</code> representing the connected client.</li>
+<li><code>owin.BasePath</code> – The portion of the request URI’s path corresponding to the “root” of the application object. See <a href="#Paths">Paths</a>.</li>
+<li><code>owin.ServerName</code>, <code>owin.ServerPort</code> – Hosts should provide values can be used to reconstruct the full URL of the request in absence of the HTTP <code>Host</code> header of the request.</li>
+<li><code>owin.UrlScheme</code> – <code>"http"</code> or <code>"https"</code></li>
+<li><code>owin.RemoteEndPoint</code> — A <code>System.Net.IPEndPoint</code> representing the connected client.</li>
 </ul>
 
 <h3>IResponse</h3>
@@ -70,9 +67,9 @@ The <code>Items</code> property is a bag of data in which the server, applicatio
 }
 </code></pre>
 
-<p>The <code>Status</code> property is a string containing the integer status of the response followed by a space and a reason phrase without a newline (e.g., “200 OK”). All characters in the status string provided by an application should be within the ASCII codepage.</p>
+<p>The <code>Status</code> property is a string containing the integer status of the response followed by a space and a reason phrase without a newline (e.g., <code>"200 OK"</code>). All characters in the status string provided by an application should be within the ASCII codepage.</p>
 
-<p>The <code>Headers</code> property is a dictionary representing the headers to be sent with the request. Keys must be header names without “:” or whitespace. Values must be <code>IEnumerable&lt;string&gt;</code> sequences containing the corresponding header value strings, without newlines. If a header should appear in a response multiple times, the sequence value for that key should have a number of elements corresponding to the number of times the header should appear in the response. All characters in header name and value strings should be within the ASCII codepage.</p>
+<p>The <code>Headers</code> property is a dictionary representing the headers to be sent with the request. Keys must be header names without <code>':'</code> or whitespace. Values must be <code>IEnumerable&lt;string&gt;</code> sequences containing the corresponding header value strings, without newlines. If the sequence value for a header name contains multiple elements, the host should write a header line with that name once for each value in the sequence. All characters in header name and value strings should be within the ASCII codepage.</p>
 
 <p>The <code>GetBody</code> method returns an enumerable which represents the body data. Each element in the enumerable must be of one of the following types:</p>
 
@@ -85,7 +82,13 @@ The <code>Items</code> property is a bag of data in which the server, applicatio
 
 <p>[TODO] Async primitives?</p>
 
-<p>Hosts must write strings to the underlying transport as UTF-8 data, both <code>byte[]</code> and <code>ArraySegment&lt;byte&gt;</code> as raw data, and <code>FileInfo</code> must cause the host to write the named file to the underlying transport. After all of the items have been enumerated or if an error occurs during enumeration, the host must call <code>Dispose</code> on the enumerator.</p>
+<p>Hosts must write <code>string</code> objects to the underlying transport as UTF-8 data, both <code>byte[]</code> and <code>ArraySegment&lt;byte&gt;</code> as raw data. <code>FileInfo</code> must cause the host to write the named file to the underlying transport. After all of the items have been enumerated or if an error occurs during enumeration, the host must call <code>Dispose</code> on the enumerator.</p>
+
+<p><a name="Paths"></a></p>
+
+<h3>Paths</h3>
+
+<p>Some hosts may have the ability to map application objects to some base path. For example, a host may have an application object configured to respond to requests beginning with <code>"/my-app"</code>, in which case it must set the value of <code>"owin.BasePath"</code> in <code>IRequest.Items</code> to <code>"/my-app"</code>. If this host received a request for <code>"/my-app/foo"</code>, the <code>Uri</code> property of the <code>IRequest</code> object provided to the application must be <code>"/foo"</code>. The value of <code>"owin.BasePath"</code> may be an empty string and must not end with a trailing slash; the value of the <code>URI</code> property must start with a slash.</p>
 
 <h3>Error Handling</h3>
 
@@ -109,7 +112,9 @@ The <code>Items</code> property is a bag of data in which the server, applicatio
 <li>The <code>Current</code> property of the enumerator returned by the <code>GetEnumerator</code> method of the <code>IEnumerable&lt;object&gt;</code> returned by <code>IResponse.GetBody</code></li>
 </ul>
 
-<p>Host implementations should strive to begin writing response data to the network as “late” as possible, so as to be able to handle as many errors from the application as possible and cleanly send the client a 500-level response. Generally, this means invoking the application and enumerating the first object from its response body, if any, before writing any header or body data to the network. If an error occurs before data is written to the network, the server should provide a 500-level response. If an error occurs enumerating subsequent items from the response body enumerable, the host may append a textual description of the error to the response data which it has already sent and close the connection.</p>
+<p>Host implementations should strive to write response data to the network as “late” as possible, so as to be able to handle as many errors from the application as possible and cleanly send the client a 500-level response. Generally, this means invoking the application and enumerating the first object from its response body, if any, before writing any header or body data to the network. If an error occurs before data is written to the network, the server should provide a 500-level response. If an error occurs enumerating subsequent items from the response body enumerable, the host may append a textual description of the error to the response data which it has already sent and close the connection.</p>
+
+<p>If an uncaught error occurs during the <code>Invoke</code> operation of an application, the application must invoke the <code>AsyncCallback</code> provided by the host and throw an exception from <code>EndInvoke</code>, effectively propagating the exception back to the host.</p>
 
 <p></body>
 </html></p>
