unicode entity fix

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <li>The <code>IRequest.EndReadBody</code> method</li>
 </ul>
 
-<p>An exception from either of these methods may indicates that the client has closed or dropped the connection, or another transport-layer error has occurred. The application should perform any post-mortem logic it needs to, and propagate the exception back to the host through one of the calls described in <a href="#ApplicationErrors">Application Errors</a> [TODO: Maybe these should never throw exceptions–the host should shield applications from that and instead just provide zero bytes?]</p>
+<p>An exception from either of these methods may indicates that the client has closed or dropped the connection, or another transport-layer error has occurred. The application should perform any post-mortem logic it needs to, and propagate the exception back to the host through one of the calls described in <a href="#ApplicationErrors">Application Errors</a> [TODO: Maybe these should never throw exceptions&mdash;the host should shield applications from that and instead just provide zero bytes?]</p>
 
 </body>
 </html>
